--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
     <footer style="height: 220px; background-color: #212529; margin-top: 150px;" class="py-5">
 
         <div class="container">
-            <div class="py-2 text-center">
+            <div class="py-2">
                 <img src="images/Logo.png" alt="">
             </div>
             <div class="social-media py-3 text-center">
